@@ -63,3 +63,5 @@
            3 databases included empty, default and full for testing.  
            This version is roughly ready, but not fully tested. Documenting gets started.
 2020-08-25 catering.py imports errormessages not shown but written in catering_import.log in home directory of user.
+2020-08-26 catering.py insert articles barcodescan and generating barcode separated
+2020-08-26 catering.py bug repaired by viewing additional products.
